Fixing issue with app overflowing on x axis

--- a/primefaces-themes/themes/primefaces-siamois-theme/siamois/others/template.scss
+++ b/primefaces-themes/themes/primefaces-siamois-theme/siamois/others/template.scss
@@ -89,6 +89,9 @@
     background-color: #F9FBF9;
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
+    min-width: 0;
+    overflow-x: auto;
 }
 
 @media (max-width: 768px) {
